first alpha release as many things changed, improved and features added. of course while learning and improving myself. not yet documented, but committing after many delays.